<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="nanodegree_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer_app">Spotify streamer</string>
    <string name="scores_app">Scores app</string>
    <string name="library_app">Library app</string>
    <string name="build_it_bigger_app">Build it bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="capstone_app">Capstone: my own app</string>
    <string name="action_settings">Settings</string>
</resources>
