<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >


    <TextView android:text="@string/nanodegree_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/AppTheme.Big"
            android:id="@+id/textView" />
    <Button
        style="@style/AppTheme.Button"
        android:layout_width="fill_parent"
        android:text="@string/spotify_streamer_app"
        android:id="@+id/spotify_streamer_button"
        android:layout_marginTop="20dp"
        android:onClick="spotify_streamer_button_click" />

    <Button
        style="@style/AppTheme.Button"
        android:layout_width="fill_parent"
        android:text="@string/scores_app"
        android:id="@+id/scores_button"
        android:onClick="scores_button_click"/>

    <Button
        style="@style/AppTheme.Button"
        android:layout_width="fill_parent"
        android:text="@string/library_app"
        android:id="@+id/library_button"
        android:onClick="library_button_click"/>

    <Button
        style="@style/AppTheme.Button"
        android:layout_width="fill_parent"
        android:text="@string/build_it_bigger_app"
        android:id="@+id/build_it_bigger_button"
        android:onClick="build_it_bigger_button_click"/>

    <Button
        style="@style/AppTheme.Button"
        android:layout_width="fill_parent"
        android:text="@string/xyz_reader_app"
        android:id="@+id/xyz_reader_button"
        android:onClick="xyz_reader_button_click"/>

    <Button
        style="@style/AppTheme.Button.Star"
        android:layout_width="fill_parent"
        android:text="@string/capstone_app"
        android:id="@+id/capstone_button"
        android:onClick="capstone_button_click"/>
</LinearLayout>
